static/styles.css
body {
    text-align: center;
    font-family: Calibri, sans-serif;
}
nav {
    background-color: #f4f4f4;
    padding: 10px;
    margin-bottom: 20px;
}
nav ul {
    list-style-type: none;
    padding: 0; 
}
nav ul li {
    display: inline;
    margin-right: 10px;
}
nav ul li a {
    text-decoration: none;
    color: #333;
}

.form-group{
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 40%;
    margin: 10px auto;

}

